# python-setuptools-template

./: .gitignore  Jenkinsfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
