[metadata]
name = PROJECT_NAME
version = 0.1.1
author = PROJECT_AUTHOR
author_email = PROJECT_AUTHOR_EMAIL
licence = MIT
description = PROJECT_SHORT_DESCRIPTION
long_description = file: README.rst, CHANGELOG.rst, LICENCE.rst
url = http://PROJECT_URL
requires_python = >=3.8
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Licence :: OSI Approved :: Apache Software Licence
    Operating System :: OS Independent
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    coverage
    mock
    nose2
    six
    unittest-xml-reporting
    sphinx
